--- a/index.html
+++ b/index.html
@@ -27,46 +27,49 @@
                     <div class="card-body">
                       <h2 class="text-center text-2xl">Triangle</h2>
                       <p class="text-center">Area (A) = 0.5 X b X h</p>
+                      <div class="flex justify-center items-center">
+                      <input  id="triangle-base" class="bg-[#F1F1F1] w-20 text-xl p-2 rounded-sm" type="text" name="" id="" placeholder="b">
+                      <span class="mr-4 ml-2">cm</span>
+                      <input id="triangle-height" class="bg-[#F1F1F1] w-20 text-xl p-2 rounded-sm" type="text" name="" id="" placeholder="h">
+                      <span class="mr-4 ml-2">cm</span>
+                      </div>
                       <div>
-                      <input class="bg-[#F1F1F1] w-24 text-xl p-2 rounded-sm" type="text" name="" id="" placeholder="b">
-                      <span class="mr-4 ml-2">cm</span>
-                      <input class="bg-[#F1F1F1] w-24 text-xl p-2 rounded-sm" type="text" name="" id="" placeholder="h">
-                      <span class="mr-4 ml-2">cm</span>
+                        <p >Area: <span id="triangle-area"></span> <span>cm<sup>2</sup></span></p>
                       </div>
                       <div class="card-actions">
-                        <button class="btn bg-[#1090D8] w-full text-white font-bold text-xl">Calculate</button>
+                        <button onclick="triangleCalculationArea()" class="btn bg-[#1090D8] w-full text-white font-bold text-xl">Calculate</button>
                       </div>
                     </div>
                   </div>
-                <!-- rectangle Card-->
+                <!-- Rectangle card -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="images/rectangle.png" alt="" /></figure>
+                    <figure><img src="images/rectangle.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">Rectangle</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <h2 class="text-center text-2xl">Rectangle</h2>
+                      <p class="text-center">Area (A) = w X l</p>
+                      <div>
+                      <input id="rectangle-width" class="bg-[#F1F1F1] w-20 text-xl p-2 rounded-sm" type="text" name="" id="" placeholder="w">
+                      <span class="mr-4 ml-2">cm</span>
+                      <input id="rectangle-length" class="bg-[#F1F1F1] w-20 text-xl p-2 rounded-sm" type="text" name="" id="" placeholder="l">
+                      <span class="mr-4 ml-2">cm</span>
+                      </div>
+                      <div>
+                        <p>Area: <span id="rectangle-area"></span> <span>cm<sup>2</sup></span></p>
+                      </div>
                       <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
+                        <button onclick="calculateRectangleArea()" class="btn bg-[#1090D8] w-full text-white font-bold text-xl">Calculate</button>
                       </div>
                     </div>
                   </div>
-                <!-- Parallelogram Card-->
-                <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="images/parallelogram.png" alt="" /></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Parallelogram</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div>
+               
             </div>
             <!-- Area calculation container -->
-            <div class="w-96 border border-gray-600 p-4 rounded-md">
+            <div class="w-80 border border-gray-600 p-4 rounded-md">
                 <h3 class="text-3xl text-center p-4">Area Calculation</h3>
             </div>
         </div>
    </main>
    <script src="scripts/triangle.js"></script>
+   <script src="scripts/rectangle.js"></script>
   </body>
 </html>
